@@ -4,6 +4,10 @@ Changelog
 1.4 - unreleased
 ----------------
 
+- Make it possible to exclude single packages from the test run by specifying
+  the '--exclude-single-packages' option.
+  [timo]
+
 
 1.3 - 2013-10-08
 ----------------
@@ -11,6 +15,7 @@ Changelog
 - Make it possible to run a single test group by specifying the --group= option.
   This can aid with debugging test isolation problems.
   [davisagli]
+
 
 1.2 - 2009-11-06
 ----------------
@@ -22,12 +27,14 @@ Changelog
   run tests for all dependencies of the packages listed in the eggs option.
   [hannosch]
 
+
 1.1 - 2009-08-19
 ----------------
 
 - Added bin/test as default for test-script option.  And [test]'s eggs (if the
   part is available) are used if the eggs option isn't specified explicitly.
   [reinout]
+
 
 1.0 - 2009-08-02
 ----------------
